Fix overflow on upcoming trip widget

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -288,7 +288,7 @@ select {
 }
 
 .display-image {
-  width: 95%;
+  width: 85%;
   border-radius: 50%;
   margin-top: 3%; 
 }
